--- a/src/css/common.css
+++ b/src/css/common.css
@@ -27,7 +27,19 @@
     background-color: gray;
     width: 50px;
     height: 50px;
+    cursor: pointer;
 }
 .subFooter{
     background-color: #2d3338;
+}
+.texto-card{
+    font-size: small;
+}
+.a-card {
+    text-decoration: none !important;
+    color: black !important;
+}
+.a-card:hover{
+    text-decoration: none !important;
+    color: black !important;
 }
